Wed Feb 27 09:24:30 2002  Carlos O'Ryan  <coryan@uci.edu>

	* include/makeinclude/platform_linux.GNU:
	  Pull back Jai's change from last night.  It looks like an
	  accident to me, and it is breaking all the builds.

Wed Feb 27 12:09:12 2002   Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Added description about setting environment variable BCBVER to
          the Borland building instructions

Wed Feb 27 10:47:12 2002   Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/ace_flags.bor:
          Added lines for new TAO_Messaging library

Wed Feb 27 01:12:32 2002  Carlos O'Ryan  <coryan@uci.edu>

	* ace/Swap.h:
	* ace/Swap.inl:
	* ace/Swap.cpp:
	  Add helper template to swap variables, very useful when
	  implementing exception neutral/safe classes.

Wed Feb 26 00:38:50 2002 UTC  Don Hinton <dhinton@ieee.org>

	* ace/Select_Reactor_Base.h:
	* ace/Select_Reactor.cpp:
	* ace/Select_Reactor_T.cpp:

	  Removed ACE_SELECT_REACTOR_HAS_DEADLOCK_DETECTION since
	  it isn't used.

Tue Feb 26 22:54:50 2002 UTC  Don Hinton <dhinton@ieee.org>

	* ace/Synch.i (ACE_Noop_Token::queueing_strategy):

	  Removed ACE_UNUSED_ARG and commented out the parameter
	  instead.  Thanks to Ossama and Craig for pointing this out.

Tue Feb 26 16:17:45 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Thread_Manager.h (ACE_Thread_Manager): Fixed a typo in
	  doxygen document tag.  Thanks to Brad Hoskins
	  <BHoskins@slo.newport.com> for reporting this.

Tue Feb 26 10:22:39 2002  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_sunos5_sunc++.GNU: Added the ability
          to enable RTTI in the compat=4 case. Removed the explicit
          inclusion of an installation-specific path to -L for compat=4.
          Installation-specific adidtions/changes should go in the
          installation's platform_macros.GNU file.

Tue Feb 26 09:48:24 2002  Craig Rodrigues  <crodrigu@bbn.com>
